<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="nav_item_SampleCVs">Sample CVs</string>
    <string name="nav_item_About">About</string>
    <string name="nav_item_Feedback">Feedback</string>
    <string name="nav_item_Logout">Logout</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <!--<item>@string/nav_item_friends</item>-->
        <!--<item>@string/nav_item_notifications</item>-->
        <item>@string/nav_item_SampleCVs</item>
        <item>@string/nav_item_About</item>
        <!--<item>@string/nav_item_Feedback</item>-->
        <!--<item>@string/nav_item_Logout</item>-->
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="title_SampleCVs">SampleCVs</string>
    <string name="title_About">About</string>
    <string name="title_Feedback">Feedback</string>

    <!--Register and Login -->

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_cpassword">Confirm Password</string>
    <string name="hint_fname">First name</string>
    <string name="hint_lname">Last name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="kinvey_account">Kinvey</string>
    <!--Register and Login ends -->

    <!--Personal Information Form Starts -->

    <string name="hint_name">Full Name</string>
    <string name="hint_dob">Date Of Birth</string>
    <string name="btn_save">Save &amp; Proceed</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="hint_address">Address</string>
    <string name="hint_contact">Contact No.</string>
    <string name="hint_objective">Objective</string>
    <string name="btn_date">Pick Your Date Of Birth</string>


    <string name="hello_world">Hello world!</string>

    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>


    <!--Personal Information Form ends -->

    <!--AdMob values -->

    <string name="title_activity_second_activiy">Interstitial</string>
    <string name="msg_welcome">Welcome to Admob. Click on the below button to launch the Interstitial ad.</string>
    <string name="btn_fullscreen_ad">Show Fullscreen Ad</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-1058873804344007/6235519776</string>
    <string name="interstitial_full_screen">ca-app-pub-1058873804344007/6235519776</string>


    <string name="section_format">Page %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
